--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   background-color: #f3f8ff;
   font-family: "Montserrat", sans-serif;
 }
+
 svg {
   position: absolute;
   bottom: 0;
@@ -15,6 +17,7 @@ svg {
   overflow: hidden;
   line-height: 0;
 }
+
 .container {
   align-content: center;
   margin: 200px auto;
@@ -23,6 +26,7 @@ svg {
   padding: 20px;
   border-radius: 20px;
 }
+
 input {
   border: none;
   border-radius: 10px;
@@ -52,9 +56,39 @@ button {
 button:hover {
   background-color: rgb(115, 153, 189);
 }
+
 h1 {
   font-weight: 500;
   margin-bottom: 30px;
   text-align: center;
   text-transform: uppercase;
+}
+
+#resultado {
+  padding-top: 10px;
+}
+#resultado p {
+  margin-bottom: 7px;
+  font-size: 1rem;
+}
+
+@media screen and (max-width:700px){
+.contanier{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+@media screen and (max-width:400px){
+    .container{
+        align-items: center;
+    }
+    h1{
+        font-size: 20px;
+    }
+    svg{
+        display: none;
+    }
+    body{
+        background-color: #F3F8FF;
+    }
 }
